Implemented GET distribution-centers/{id}/inventory and unit tests - #128
