# swagger.yaml
@@ -482,6 +482,42 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  '/distribution-centers/{id}/inventory':
+    get:
+      summary: Retrieve inventory for a specific distribution center
+      parameters:
+        - name: Authorization
+          in: header
+          description: Bearer token
+          required: true
+          type: string
+        - name: id
+          in: path
+          description: ID of the distribution center for which inventory is to be retrieved
+          required: true
+          type: string
+      tags:
+        - DistributionCenter
+        - Inventory
+      responses:
+        200:
+          description: Inventory retrieved successfully
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Inventory'
+        401:
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: Distribution center does not exist
+          schema:
+            $ref: '#/definitions/Error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   '/retailers':
     get:
       summary: Retrieves retailers
